src/app/antlr/generated/ExpParser.ts
// Generated from ./src/app/antlr/Exp.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ExpListener } from "./ExpListener";
import { ExpVisitor } from "./ExpVisitor";


export class ExpParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly Number = 7;
	public static readonly WS = 8;
	public static readonly RULE_eval = 0;
	public static readonly RULE_additionExp = 1;
	public static readonly RULE_multiplyExp = 2;
	public static readonly RULE_atomExp = 3;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"eval", "additionExp", "multiplyExp", "atomExp",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'+'", "'-'", "'*'", "'/'", "'('", "')'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"Number", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ExpParser._LITERAL_NAMES, ExpParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ExpParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Exp.g4"; }

	// @Override
	public get ruleNames(): string[] { return ExpParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ExpParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ExpParser._ATN, this);
	}
	// @RuleVersion(0)
	public eval(): EvalContext {
		let _localctx: EvalContext = new EvalContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ExpParser.RULE_eval);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 8;
			this.additionExp();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public additionExp(): AdditionExpContext {
		let _localctx: AdditionExpContext = new AdditionExpContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ExpParser.RULE_additionExp);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 10;
			this.multiplyExp();
			this.state = 17;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ExpParser.T__0 || _la === ExpParser.T__1) {
				{
				this.state = 15;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case ExpParser.T__0:
					{
					this.state = 11;
					this.match(ExpParser.T__0);
					this.state = 12;
					this.multiplyExp();
					}
					break;
				case ExpParser.T__1:
					{
					this.state = 13;
					this.match(ExpParser.T__1);
					this.state = 14;
					this.multiplyExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 19;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public multiplyExp(): MultiplyExpContext {
		let _localctx: MultiplyExpContext = new MultiplyExpContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ExpParser.RULE_multiplyExp);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 20;
			this.atomExp();
			this.state = 27;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ExpParser.T__2 || _la === ExpParser.T__3) {
				{
				this.state = 25;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case ExpParser.T__2:
					{
					this.state = 21;
					this.match(ExpParser.T__2);
					this.state = 22;
					this.atomExp();
					}
					break;
				case ExpParser.T__3:
					{
					this.state = 23;
					this.match(ExpParser.T__3);
					this.state = 24;
					this.atomExp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 29;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public atomExp(): AtomExpContext {
		let _localctx: AtomExpContext = new AtomExpContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ExpParser.RULE_atomExp);
		try {
			this.state = 35;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ExpParser.Number:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 30;
				this.match(ExpParser.Number);
				}
				break;
			case ExpParser.T__4:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 31;
				this.match(ExpParser.T__4);
				this.state = 32;
				this.additionExp();
				this.state = 33;
				this.match(ExpParser.T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!ExpParser.__ATN) {
			ExpParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(ExpParser._serializedATN));
		}

		return ExpParser.__ATN;
	}

}

export class EvalContext extends ParserRuleContext {
	public additionExp(): AdditionExpContext {
		return this.getRuleContext(0, AdditionExpContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ExpParser.RULE_eval; }
	// @Override
	public enterRule(listener: ExpListener): void {
		if (listener.enterEval) {
			listener.enterEval(this);
		}
	}
	// @Override
	public exitRule(listener: ExpListener): void {
		if (listener.exitEval) {
			listener.exitEval(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ExpVisitor<Result>): Result {
		if (visitor.visitEval) {
			return visitor.visitEval(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class AdditionExpContext extends ParserRuleContext {
	public multiplyExp(): MultiplyExpContext[];
	public multiplyExp(i: number): MultiplyExpContext;
	public multiplyExp(i?: number): MultiplyExpContext | MultiplyExpContext[] {
		if (i === undefined) {
			return this.getRuleContexts(MultiplyExpContext);
		} else {
			return this.getRuleContext(i, MultiplyExpContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ExpParser.RULE_additionExp; }
	// @Override
	public enterRule(listener: ExpListener): void {
		if (listener.enterAdditionExp) {
			listener.enterAdditionExp(this);
		}
	}
	// @Override
	public exitRule(listener: ExpListener): void {
		if (listener.exitAdditionExp) {
			listener.exitAdditionExp(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ExpVisitor<Result>): Result {
		if (visitor.visitAdditionExp) {
			return visitor.visitAdditionExp(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class MultiplyExpContext extends ParserRuleContext {
	public atomExp(): AtomExpContext[];
	public atomExp(i: number): AtomExpContext;
	public atomExp(i?: number): AtomExpContext | AtomExpContext[] {
		if (i === undefined) {
			return this.getRuleContexts(AtomExpContext);
		} else {
			return this.getRuleContext(i, AtomExpContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ExpParser.RULE_multiplyExp; }
	// @Override
	public enterRule(listener: ExpListener): void {
		if (listener.enterMultiplyExp) {
			listener.enterMultiplyExp(this);
		}
	}
	// @Override
	public exitRule(listener: ExpListener): void {
		if (listener.exitMultiplyExp) {
			listener.exitMultiplyExp(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ExpVisitor<Result>): Result {
		if (visitor.visitMultiplyExp) {
			return visitor.visitMultiplyExp(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class AtomExpContext extends ParserRuleContext {
	public Number(): TerminalNode | undefined { return this.tryGetToken(ExpParser.Number, 0); }
	public additionExp(): AdditionExpContext | undefined {
		return this.tryGetRuleContext(0, AdditionExpContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ExpParser.RULE_atomExp; }
	// @Override
	public enterRule(listener: ExpListener): void {
		if (listener.enterAtomExp) {
			listener.enterAtomExp(this);
		}
	}
	// @Override
	public exitRule(listener: ExpListener): void {
		if (listener.exitAtomExp) {
			listener.exitAtomExp(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ExpVisitor<Result>): Result {
		if (visitor.visitAtomExp) {
			return visitor.visitAtomExp(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


